--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -1,9 +1,9 @@
 Package: com.tyhoff.spotifysearch
 Name: SpotifySearch
 Depends: mobilesubstrate, am.theiostre.searchloader, firmware (>= 7.0)
-Version: 0.0.1
+Version: 0.1
 Architecture: iphoneos-arm
-Description: Search Spotify tracks, artists and albums from Spotlight. Requires Spotify
+Description: Search for and open Spotify tracks, artists and albums from Spotlight. Requires Spotify and iOS7
 Maintainer: Tyler H
 Author: Tyler H
 Section: Tweak
