--- a/artists/Artists.plist
+++ b/artists/Artists.plist
@@ -26,7 +26,7 @@
 			<key>cell</key>
 			<string>PSLinkListCell</string>
 			<key>defaults</key>
-			<string>com.tyhoff.spotifysearch.artists</string>
+			<string>com.tyhoff.spotifysearch</string>
 			<key>default</key>
 			<integer>5</integer>
 			<key>detail</key>
@@ -34,7 +34,7 @@
 			<key>label</key>
 			<string>Limit</string>
 			<key>key</key>
-			<string>Limit</string>
+			<string>ArtistLimit</string>
 			<key>validTitles</key>
 			<array>
 				<string>1</string>
