--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -1,9 +1,9 @@
 Package: com.tyhoff.spotifysearch
 Name: SpotifySearch
-Depends: mobilesubstrate, am.theiostre.searchloader, firmware (>= 7.0)
-Version: 0.1
+Depends: mobilesubstrate, preferenceloader, firmware (>= 7.0), am.theiostre.searchloader
+Version: 1.0
 Architecture: iphoneos-arm
 Description: Search for and open Spotify tracks, artists and albums from Spotlight. Requires Spotify and iOS7
-Maintainer: Tyler H
-Author: Tyler H
+Maintainer: Tyler Hoffman <tyhoffman1@gmail.com>
+Author: Tyler Hoffman <tyhoffman1@gmail.com>
 Section: Tweak
