--- a/artists/Makefile
+++ b/artists/Makefile
@@ -2,18 +2,18 @@ export ARCHS = armv7 arm64
 
 include theos/makefiles/common.mk
 
-BUNDLE_NAME = SpotifySearchArtists
-SpotifySearchArtists_FILES = Artists.m
-SpotifySearchArtists_INSTALL_PATH = /Library/SearchLoader/SearchBundles
-SpotifySearchArtists_BUNDLE_EXTENSION = searchBundle
-SpotifySearchArtists_LDFLAGS = -lspotlight
-SpotifySearchArtists_PRIVATE_FRAMEWORKS = Search
+BUNDLE_NAME = SpotiSearchArtists
+SpotiSearchArtists_FILES = Artists.m
+SpotiSearchArtists_INSTALL_PATH = /Library/SearchLoader/SearchBundles
+SpotiSearchArtists_BUNDLE_EXTENSION = searchBundle
+SpotiSearchArtists_LDFLAGS = -lspotlight
+SpotiSearchArtists_PRIVATE_FRAMEWORKS = Search
 
 include $(THEOS_MAKE_PATH)/bundle.mk
 
 internal-stage::
 	mkdir -p $(THEOS_STAGING_DIR)/Library/SearchLoader/Applications
-	cp -r InfoBundle/ $(THEOS_STAGING_DIR)/Library/SearchLoader/Applications/SpotifySearchArtists.bundle
+	cp -r InfoBundle/ $(THEOS_STAGING_DIR)/Library/SearchLoader/Applications/SpotiSearchArtists.bundle
 
 	mkdir -p $(THEOS_STAGING_DIR)/Library/SearchLoader/Preferences
-	cp Artists.plist $(THEOS_STAGING_DIR)/Library/SearchLoader/Preferences/SpotifySearchArtists.plist
+	cp Artists.plist $(THEOS_STAGING_DIR)/Library/SearchLoader/Preferences/SpotiSearchArtists.plist
