--- a/tracks/Resources/Info.plist
+++ b/tracks/Resources/Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SpotifySearchTracks</string>
+	<string>SpotiSearchTracks</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.tyhoff.spotifysearch.tracks</string>
+	<string>com.tyhoff.spotisearch.tracks</string>
 	<key>CFBundleName</key>
-	<string>SpotifySearchTracks</string>
+	<string>SpotiSearchTracks</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -45,7 +45,7 @@
 	<key>MinimumOSVersion</key>
 	<string>5.0</string>
 	<key>NSPrincipalClass</key>
-	<string>TLSpotifyTracksDatastore</string>
+	<string>TLSpotiTracksDatastore</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
