--- a/albums/Albums.plist
+++ b/albums/Albums.plist
@@ -10,7 +10,7 @@
 		<key>icon</key>
 		<string>Music.png</string>
 		<key>label</key>
-		<string>Spotify Albums</string>
+		<string>SpotiSearch Albums</string>
 	</dict>
 
 	<key>items</key>
@@ -26,7 +26,7 @@
 			<key>cell</key>
 			<string>PSLinkListCell</string>
 			<key>defaults</key>
-			<string>com.tyhoff.spotifysearch</string>
+			<string>com.tyhoff.spotisearch</string>
 			<key>default</key>
 			<integer>5</integer>
 			<key>detail</key>
@@ -61,6 +61,6 @@
 	</array>
 
 	<key>title</key>
-	<string>Spotify Albums</string>
+	<string>SpotiSearch Albums</string>
 </dict>
 </plist>
