--- a/artists/InfoBundle/Info.plist
+++ b/artists/InfoBundle/Info.plist
@@ -5,12 +5,12 @@
 	<key>LSTypeIsPackage</key>
 	<true />
 	<key>SPCategory</key>
-	<string>SpotifySearchArtists</string>
+	<string>SpotiSearchArtists</string>
 	<key>SPDisplayIdentifier</key>
 	<string>com.spotify.client.artists</string>
 	<key>TLIsSearchBundle</key>
 	<true />
 	<key>TLDisplayName</key>
-	<string>Spotify Artists</string>
+	<string>SpotiSearch Artists</string>
 </dict>
 </plist>
