--- a/artists/Resources/Info.plist
+++ b/artists/Resources/Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SpotifySearchArtists</string>
+	<string>SpotiSearchArtists</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.tyhoff.spotifysearch.artists</string>
+	<string>com.tyhoff.spotisearch.artists</string>
 	<key>CFBundleName</key>
-	<string>SpotifySearchArtists</string>
+	<string>SpotiSearchArtists</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -45,7 +45,7 @@
 	<key>MinimumOSVersion</key>
 	<string>5.0</string>
 	<key>NSPrincipalClass</key>
-	<string>TLSpotifyArtistsDatastore</string>
+	<string>TLSpotiArtistsDatastore</string>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
